Profiles avanzado, queda poner en gris el perfil que se está usando, y añadir ciertos datos al perfil como puede ser las partidas ganadas y las skins

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="skins">Skins</string>
     <string name="historial">Historial</string>
     <string name="ajustes">Ajustes</string>
+    <string name="add">Add</string>
+    <string name="use">Use</string>
+    <string name="profile" />
+    <string name="perfiles">Perfiles</string>
 </resources>
