--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="editar">Editar</string>
     <string name="eliminar">Eliminar</string>
     <string name="usar">Usar</string>
+    <string name="friends">Amigos</string>
+    <string name="añadir_amigo">Añadir amigo</string>
 </resources>
