--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="usar">Usar</string>
     <string name="friends">Amigos</string>
     <string name="añadir_amigo">Añadir amigo</string>
+    <string name="eliminar_amigo">Eliminar amigo</string>
 </resources>
