Ya se cambian correctamente las skins tanto de tablero como de peizas para un usuario, ahora skinsactivity permite ver que skins quieres ver, si las de tablero o las de piezas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="friends">Amigos</string>
     <string name="añadir_amigo">Añadir amigo</string>
     <string name="eliminar_amigo">Eliminar amigo</string>
+    <string name="piece_skins">Piece Skins</string>
+    <string name="board_skins">Board Skins</string>
 </resources>
