IMplementado guardar historial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="eliminar_amigo">Eliminar amigo</string>
     <string name="piece_skins">Piece Skins</string>
     <string name="board_skins">Board Skins</string>
+    <string name="show">Ver</string>
 </resources>
