Implementado filtrado en listview en history
Si se selecciona el switch muestra todos los historiales de partidas de la aplicación, sino sólo muestra los historiales en el que haya participado un usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="piece_skins">Piece Skins</string>
     <string name="board_skins">Board Skins</string>
     <string name="show">Ver</string>
+    <string name="show_all_histories">Mostrar todos los historiales</string>
 </resources>
